# python-pptx-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: bench_vs_python_pptx.py
crates/pptx-core/: Cargo.toml
crates/pptx-core/src/: dom.rs  error.rs  imagespec.rs  lib.rs  ns.rs  opc.rs
crates/pptx-python/: Cargo.toml
crates/pptx-python/src/: autoshapes.rs  chart.rs  enums.rs  image.rs  lib.rs  table.rs
python/pptx_rs/: __init__.py  _core.pyi  util.py
python/pptx_rs/enum/: __init__.py  shapes.py
tests/: conftest.py  test_add_shapes.py  test_add_slide.py  test_read.py  test_util.py  test_write.py
tests/compat/: README.md
tests/compat/features/: environment.py  prs-default-template.feature  prs-open-save.feature  prs-presentation-props.feature  shp-shapes.feature  shp-shared.feature  sld-slide.feature  sld-slides.feature  steps  txt-paragraph.feature  txt-text.feature  txt-textframe.feature
tests/fixtures/markitdown/: README.md
tests/integrations/: test_markitdown.py
