[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "python-pptx-rs"
description = "Rust-powered, python-pptx-compatible library for PowerPoint (.pptx) files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "wakita181009" }]
requires-python = ">=3.10"
keywords = ["powerpoint", "pptx", "openxml", "office", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Office Suites",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/wakita181009/python-pptx-rs"

[tool.maturin]
manifest-path = "crates/pptx-python/Cargo.toml"
python-source = "python"
module-name = "pptx_rs._core"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
    "ty>=0.0.56",
    "python-pptx>=1.0.2",
    "behave>=1.3",
    "maturin>=1.14",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
