[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "python-pptx-rs"
description = "Rust-powered, python-pptx-compatible library for PowerPoint (.pptx) files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "wakita181009" }]
requires-python = ">=3.10"
keywords = ["powerpoint", "pptx", "openxml", "office", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Office Suites",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/wakita181009/python-pptx-rs"

[tool.maturin]
manifest-path = "crates/pptx-python/Cargo.toml"
python-source = "python"
module-name = "pptx_rs._core"

[dependency-groups]
dev = [
    "behave>=1.3",
    "markitdown>=0.1.6",
    "maturin>=1.14",
    # onnxruntime dropped cp310 manylinux wheels after 1.23.x
    "onnxruntime>=1.22,<1.24; python_version < '3.11'",
    "onnxruntime>=1.22; python_version >= '3.11'",
    "pytest>=9.1",
    "pytest-cov>=7.1.0",
    "python-pptx>=1.0.2",
    "ruff>=0.15",
    "ty>=0.0.56",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["python", "tests"]
# vendored python-pptx BDD steps are third-party code
extend-exclude = ["tests/compat/features/steps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.src]
exclude = ["tests/compat/features/steps"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pptx_rs --cov-report=term-missing"

[tool.coverage.run]
source = ["pptx_rs"]

[tool.coverage.report]
fail_under = 80
show_missing = true
