[package]
name = "pptx-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 bindings for python-pptx-rs"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pptx-core = { path = "../pptx-core" }
pyo3 = { version = "0.29.0", features = ["abi3-py310", "extension-module"] }
